add features section to graphql proxy config
