# api/model/api.go
@@ -1201,6 +1201,8 @@ type GraphQLResponseExtensions struct {
 
 type GraphQLProxyConfig struct {
 	// +nullable
+	Features GraphQLProxyFeaturesConfig `json:"features"`
+	// +nullable
 	AuthHeaders      map[string]string `json:"auth_headers,omitempty"`
 	SubscriptionType SubscriptionType  `json:"subscription_type,omitempty"`
 	// +nullable
@@ -1208,6 +1210,10 @@ type GraphQLProxyConfig struct {
 	UseResponseExtensions GraphQLResponseExtensions `json:"use_response_extensions,omitempty"`
 	// +nullable
 	RequestHeadersRewrite map[string]RequestHeadersRewriteConfig `json:"request_headers_rewrite,omitempty"`
+}
+
+type GraphQLProxyFeaturesConfig struct {
+	UseImmutableHeaders bool `json:"use_immutable_headers"`
 }
 
 type RequestHeadersRewriteConfig struct {
