# api/model/zz_generated.deepcopy.go
@@ -1306,6 +1306,7 @@ func (in *GraphQLPlayground) DeepCopy() *GraphQLPlayground {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *GraphQLProxyConfig) DeepCopyInto(out *GraphQLProxyConfig) {
 	*out = *in
+	out.Features = in.Features
 	if in.AuthHeaders != nil {
 		in, out := &in.AuthHeaders, &out.AuthHeaders
 		*out = make(map[string]string, len(*in))
@@ -1336,6 +1337,21 @@ func (in *GraphQLProxyConfig) DeepCopy() *GraphQLProxyConfig {
 		return nil
 	}
 	out := new(GraphQLProxyConfig)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *GraphQLProxyFeaturesConfig) DeepCopyInto(out *GraphQLProxyFeaturesConfig) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new GraphQLProxyFeaturesConfig.
+func (in *GraphQLProxyFeaturesConfig) DeepCopy() *GraphQLProxyFeaturesConfig {
+	if in == nil {
+		return nil
+	}
+	out := new(GraphQLProxyFeaturesConfig)
 	in.DeepCopyInto(out)
 	return out
 }
