# config/crd/bases/tyk.tyk.io_apidefinitions.yaml
@@ -654,6 +654,14 @@ spec:
                           type: string
                         nullable: true
                         type: object
+                      features:
+                        nullable: true
+                        properties:
+                          use_immutable_headers:
+                            type: boolean
+                        required:
+                        - use_immutable_headers
+                        type: object
                       request_headers:
                         additionalProperties:
                           type: string
@@ -688,6 +696,8 @@ spec:
                         required:
                         - on_error_forwarding
                         type: object
+                    required:
+                    - features
                     type: object
                   schema:
                     description: Schema is the GraphQL Schema exposed by the GraphQL
